--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -4,6 +4,7 @@ $color-h1:white;
 $color-h2:white;
 $color-h3:white;
 $color-h4:white;
+$color-p:white;
 $color-btn:white;
 $font-family-body:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 $font-size-h1:3rem;
