--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -2,80 +2,97 @@
   text-align: center;
   padding-top: 2rem;
   padding-bottom: 0.5rem;
- }
+  }
 
 .grid__container__contacto {
   display: grid;
   grid-template-columns: 50% 50%;
-  grid-template-rows: 15rem 15rem 5rem;
-  gap: 7rem;
-  margin-left: 6rem;
-  margin-right: 6rem;
-  justify-content: center;
-  align-content: center;
-  background-position: center;
+  grid-template-rows: 18rem 18rem 5rem;
+  margin-left: 1rem;
+  margin-right: 10rem;
+  gap: 5rem;
+  justify-items: center;
+  align-items: center;
   margin-top: 0.5rem;
-  padding: 5rem; }
+  padding: 5rem; 
+  }
 
 .grid__container__contacto .grid__uno {
-    grid-row: 1/2;
-    grid-column: 1/2;
-    background-image: url("../recursos/contacto/contacto__1.jpg");
-    background-position: inherit;
-    background-size: cover;
-    background-repeat: no-repeat;
-    border: solid #272e29; }
+  grid-row: 1/2;
+  grid-column: 1/2;
+  background-image: url("../recursos/contacto/contacto__1.jpg");
+  background-position: inherit;
+  background-size: cover;
+  background-repeat: no-repeat;
+  border: solid white; 
+  }
 
-.grid__container__contacto .grid__uno__texto .grid__texto{
-      grid-row: 1/2;
-      grid-column: 2/3;
-      background-position: inherit;
-      background-size: cover;
-      background-repeat: no-repeat;
-      border: solid #272e29; }
+.grid__container__contacto .grid__uno__texto {
+  grid-row: 1/2;
+  grid-column: 2/3;
+  background-position: inherit;
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 30rem;
+  height: 20rem;
+  padding-top: 0.5rem;
+  padding-right: 0.5rem;
+  padding: 0.50rem;
+  padding-right: 0.5rem ;
+  text-align: justify;
+  border: solid white; 
+  border-radius: 7%;
+  }
 
 .grid__container__contacto .grid__dos {
-        grid-row: 2/3;
-        grid-column: 1/2;
-        background-image: url("../recursos/contacto/contacto__2.jpg");
-        background-position: inherit;
-        background-size: cover;
-        background-repeat: no-repeat;
-        border: solid #272e29; }
+  grid-row: 2/3;
+  grid-column: 1/2;
+  background-image: url("../recursos/contacto/contacto__2.jpg");
+  background-position: inherit;
+  background-size: cover;
+  background-repeat: no-repeat;
+  border: solid white; 
+  }
 
 .grid__container__contacto .grid__tres {
-          grid-row: 2/3;
-          grid-column: 2/3;
-          background-image: url("../recursos/contacto/contacto__5.jpg");
-          background-position: inherit;
-          background-size: cover;
-          background-repeat: no-repeat;
-          border: solid #272e29; }   
+  grid-row: 2/3;
+  grid-column: 2/3;
+  background-image: url("../recursos/contacto/contacto__5.jpg");
+  background-position: inherit;
+  background-size: cover;
+  background-repeat: no-repeat;
+  border: solid white; 
+   }   
 
-.grid__container__contacto .grid__dos__texto .grid__texto{
-          grid-row: 3/4;
-          grid-column: 1/2;
-         background-position: inherit;
-          background-size: cover;
-          background-repeat: no-repeat;
-          border: solid #272e29; }
+.grid__container__contacto .grid__dos__texto {
+  grid-row: 3/4;
+  grid-column: 1/2;
+  width: 30rem;
+  text-align: center;
+  background-position: inherit;
+  background-size: cover;
+  background-repeat: no-repeat;
+  border: solid white; 
+   }
   
-  
-.grid__container__contacto .grid__tres__texto .grid__texto{
-      grid-row: 3/4;
-      grid-column: 2/3;
-      background-position: inherit;
-      background-size: cover;
-      background-repeat: no-repeat;
-      border: solid #272e29; }
+.grid__container__contacto .grid__tres__texto {
+  grid-row: 3/4;
+  grid-column: 2/3;
+  width: 30rem;
+  text-align: center;
+  background-position: inherit;
+  background-size: cover;
+  background-repeat: no-repeat;
+  border: solid white; 
+  }
 
+.textoGrid1 {
+  font-size: 1.35rem;
+     }
 
-.grid__texto{
- font-size: 1rem;
-
-}
-
-
+.textoGrid {
+ font-size: 1.5rem;
+  }
 
 .contactoTexto {
   display: flex;
@@ -98,238 +115,257 @@
   margin-left: 30rem;
   margin-right: 10rem;
   margin-top: 2rem;
-  margin-bottom: 2rem; }
+  margin-bottom: 2rem; 
+  border-radius: 7%;
+  }
 
   .imput .contacto__imput {
     font-size: 1.5rem;
     padding: 0.50rem;
-    color: white; }
+    color: white; 
+    }
 
 
 
 @media (min-width: 541px) and (max-width: 720px) {
   .contactoTituloh2{
+    font-size: 1.75rem;
     text-align: center;
     padding-top: 1rem;
     padding-bottom: 0.5rem;
-   }
+    }
   
   .grid__container__contacto {
-        grid-template-columns: 50% 50%;
-    grid-template-rows: 15rem 15rem 2rem;
-    justify-content: center;
-    gap: 1rem;
-    margin-left: 1.5rem;
-    margin-right: 1.5rem;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 15rem 15rem 5rem;
+    gap: 1.5rem;
+    margin-left: 0.5rem;
+    margin-right: 1rem;
     margin-top: 0.5rem;
+    margin-bottom: 1rem;
     padding: 2rem; 
- 
-  }
+    }
   
   .grid__container__contacto .grid__uno {
-      grid-row: 1/2;
-      grid-column: 1/2;
-      width: 15rem;
-      height:15rem ;
-      background-image: url("../recursos/contacto/contacto__1.jpg");
-      
-        }
+    grid-row: 1/2;
+    grid-column: 1/2;
+    margin: auto;
+    width: 15rem;
+    height:15rem ;
+    background-image: url("../recursos/contacto/contacto__1.jpg");
+    border:solid white
+    }
   
-  .grid__container__contacto .grid__uno__texto .grid__texto {
-        font-size:1rem ;
-        grid-row: 1/2;
-        grid-column: 2/3;
-        border: solid #272e29; }
-
-  
+  .grid__container__contacto .grid__uno__texto  {
+    font-size:1rem ;
+    grid-row: 1/2;
+    width: 15rem;
+    height: 15rem;
+    grid-column: 2/3;
+    border: solid white; 
+    }
+ 
   .grid__container__contacto .grid__dos {
-          grid-row: 2/3;
-          grid-column: 1/2;
-          width: 15rem;
-          height:15rem ;
-          background-image: url("../recursos/contacto/contacto__2.jpg");
-          border: solid #272e29; }
+    grid-row: 2/3;
+    grid-column: 1/2;
+    width: 15rem;
+    height:15rem ;
+    background-image: url("../recursos/contacto/contacto__2.jpg");
+    border: solid white; 
+    }
 
   .grid__container__contacto .grid__tres {
-            grid-row: 2/3;
-            grid-column: 2/3;
-            width: 15rem;
-            height:15rem ;
-            background-image: url("../recursos/contacto/contacto__5.jpg");
-            border: solid #272e29; }         
+    grid-row: 2/3;
+    grid-column: 2/3;
+    width: 15rem;
+    height:15rem ;
+    background-image: url("../recursos/contacto/contacto__5.jpg");
+    border: solid white; 
+    }         
 
-   .grid__container__contacto .grid__dos__texto .grid__texto {
-            font-size: 1rem;
-            grid-row: 3/4;
-            grid-column: 1/2;
-           border: solid #272e29; }
-         
-   
-  
-    .grid__container__contacto .grid__item.grid__tres__texto .grid__texto{
-        font-size: 1rem;
-        grid-row: 3/4;
-        grid-column: 2/3;
-        border: solid #272e29; }
-
-  .texto{
+  .grid__container__contacto .grid__dos__texto {
     font-size: 1rem;
-  }
-  
-       
-    .contactoTexto {
+    grid-row: 3/4;
+    grid-column: 1/2;
+    width: 15rem;
+    height: 5rem;
+    border: solid white; 
+    }
+   
+  .grid__container__contacto .grid__item.grid__tres__texto {
+    font-size: 1rem;
+    grid-row: 3/4;
+    grid-column: 2/3;
+    width: 15rem;
+    height: 5rem;
+    border: solid white; 
+    }
+
+  .textoGrid1{
+      font-size: 0.8rem;
+      }  
+
+  .textoGrid{
+    font-size: 1rem;
+    }
+      
+  .contactoTexto {
     display: flex;
     font-size: 1.25rem;
     margin-left:3rem;
     text-align: center;
-      }
+   }
     
-  
-    
-  
-  
-      .imput {
-        background-color:rgb(29, 41, 37);
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        font-size: 2rem;
-        padding: 1rem;
-        width: 23rem;
-        height: 17rem;
-        text-align: center;
-        margin-left: 6.5rem;
-        margin-right: 4rem;
-        margin-top: 2rem;
-        margin-bottom: 2rem; }
+  .imput {
+    background-color:rgb(29, 41, 37);
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    font-size: 2rem;
+    padding: 1rem;
+    width: 23rem;
+    height: 17rem;
+    text-align: center;
+    margin-left: 6.5rem;
+    margin-right: 4rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem; 
+    }
       
-        .imput .contacto__imput {
-          font-size: 1rem;
-          padding: 0.50rem;
-          color: white; }
+  .imput .contacto__imput {
+    font-size: 1rem;
+    padding: 0.50rem;
+    color: white; 
+    }
   }
 
 @media (min-width: 320px) and (max-width: 540px) {
-  
+
+   
   .contactoTituloh2{
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     text-align: center;
     margin-left: 2rem;
     padding-top: 1rem;
-    
-   }
+     }
   
   .grid__container__contacto {
     grid-template-columns: 100%;
-    grid-template-rows: 20rem 5rem 20rem 20rem 2rem 2rem;
-    gap: 1rem;
+    grid-template-rows: 20rem 17rem 20rem 20rem 4rem 4em;
+    justify-items: center;
+    align-items: center;
+    gap: 2rem;
     margin-left: 1rem;
-    margin-right: 1rem;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
     width: 25rem;
-    height:76rem;
-    background-color: black;
-         }
+    height:98rem;
+     }
   
   .grid__container__contacto .grid__uno {
-      align-content: center;
-      grid-row: 1/2;
-      grid-column: 1/1;
-      padding-left: 1rem;
-      width: 20rem;
-      height:20rem;
-      background-position: inherit;
+    align-content: center;
+    grid-row: 1/2;
+    grid-column: 1/1;
+    
+    width: 20rem;
+    height:20rem;
+    background-position: inherit;
     background-size: cover;
     background-repeat: no-repeat;
-      background-image: url("../recursos/contacto/contacto__1.jpg");
-      
-        }
+    background-image: url("../recursos/contacto/contacto__1.jpg");
+    border: solid white;
+     }
   
-   .grid__container__contacto .grid__uno__texto {
-        grid-row: 2/3;
-        grid-column:1/1;
-        width: 20rem;
-        background-position: inherit;
+  .grid__container__contacto .grid__uno__texto {
+    grid-row: 2/3;
+    grid-column:1/1;
+    width: 20rem;
+    height: 17rem;
+    background-position: inherit;
     background-size: cover;
     background-repeat: no-repeat;
-        border: solid #272e29; }
-
-  
+    border: solid white; 
+    }
+ 
   .grid__container__contacto .grid__dos {
-          grid-row: 3/4;
-          grid-column: 1/1;
-          width: 20rem;
-          height:20rem ;
-          background-image: url("../recursos/contacto/contacto__2.jpg");
-          background-position: inherit;
+    grid-row: 3/4;
+    grid-column: 1/1;
+    width: 20rem;
+    height:20rem ;
+    background-image: url("../recursos/contacto/contacto__2.jpg");
+    background-position: inherit;
     background-size: cover;
     background-repeat: no-repeat;
-          border: solid #272e29; }
+    border: solid white; 
+    }
 
   .grid__container__contacto .grid__tres {
-            grid-row: 4/5;
-            grid-column: 1/1;
-            width: 20rem;
-            height:20rem ;
-            background-image: url("../recursos/contacto/contacto__5.jpg");
-            background-position: inherit;
-            background-size: cover;
-            background-repeat: no-repeat;  
-            border: solid #272e29; }         
+    grid-row: 4/5;
+    grid-column: 1/1;
+    width: 20rem;
+    height:20rem ;
+    background-image: url("../recursos/contacto/contacto__5.jpg");
+    background-position: inherit;
+    background-size: cover;
+    background-repeat: no-repeat;  
+    border: solid white; 
+    }         
 
 
   .grid__container__contacto .grid__dos__texto {
-            grid-row: 5/6;
-            grid-column: 1/1;
-            width: 20rem;
-            background-position: inherit;
+    grid-row: 5/6;
+    grid-column: 1/1;
+    width: 20rem;
+    background-position: inherit;
     background-size: cover;
     background-repeat: no-repeat;
-           border: solid #272e29; }
-  
-  
-
+    border: solid white; 
+    }
   .grid__container__contacto .grid__tres__texto  {
-            grid-row: 6/7; 
-            grid-column: 1/1;
-            width: 20rem;
-            font-size: 0.5rem;
-            background-position: inherit;
+    grid-row: 6/7; 
+    grid-column: 1/1;
+    width: 20rem;
+    font-size: 0.5rem;
+    background-position: inherit;
     background-size: cover;
     background-repeat: no-repeat;
-           border: solid #272e29; }
-  
-      
- .texto{
-  font-size: 1rem;
- }
+    border: solid white; 
+    }
+  .textoGrid1{
+    font-size: 1rem;
+    }    
+
+  .textoGrid{
+    font-size: 1rem;
+    }
   
   .contactoTexto {
-     font-size: 1.1rem;
-     text-align: center;
-     margin-left: 1rem;
-     margin-right: 1rem;
-    
-      }
-    
-   
-      .imput {
-        background-color:rgb(29, 41, 37);
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        font-size: 2rem;
-        padding: 1rem;
-        width: 23rem;
-        height: 18rem;
-        text-align: center;
-        margin-left: 2rem;
-        margin-right: 1rem;
-        margin-top: 2rem;
-        margin-bottom: 2rem; }
+    font-size: 1.1rem;
+    text-align: center;
+    margin-left: 1rem;
+    margin-right: 1rem;
+    }
+     
+  .imput {
+    background-color:rgb(29, 41, 37);
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    font-size: 2rem;
+    padding: 1rem;
+    width: 21rem;
+    height: 18rem;
+    text-align: center;
+    margin-left: 2rem;
+    margin-right: 2rem;
+    margin-top: 2rem;
+    margin-bottom: 1.5rem; 
+    }
       
-        .imput .contacto__imput {
-          font-size: 1rem;
-          padding: 0.50rem;
-          color: white; }
+  .imput .contacto__imput {
+    font-size: 1rem;
+    padding: 0.50rem;
+    color: white; 
+    }
  }
 
