--- a/scss/_galeria.scss
+++ b/scss/_galeria.scss
@@ -74,9 +74,9 @@
 
 .linkContactoGaleria {
   padding-bottom: 2rem;
-  margin-left: 20rem;
-    }  
-
+  text-align: center;
+  }  
+                            
 .btn__galeria{
   background-color:white;
   width: $ancho/2;
@@ -96,9 +96,9 @@
   } 
             
 .btn__galeria__texto{
-  color:black;
-  &:hover{
-  color:wheat
+  color: black;
+  &:hover{                                 
+  color:white;
    }
   }
           
@@ -107,8 +107,11 @@
 @media (min-width: 541px) and (max-width: 720px) {
 
   .galeriaTituloh2{
-    padding: 1.5rem;
-    margin-left: 5rem; }
+    font-size: 1.75rem;
+    padding: 0.5rem;
+    margin-left: 5rem; 
+    margin-top: 0.25rem;
+    }
     
   .grid__container__galeria {
     display: grid;
@@ -116,41 +119,36 @@
     grid-template-rows: 15rem 15rem 15rem 15rem;
     border: 0.1rem solid #0f010f;
     grid-template-areas: "uno dos"
- "tres cuatro"
- "cinco seis"
- "ocho seis";
+    "tres cuatro"
+    "cinco seis"
+    "ocho seis";
     gap: 0.5rem;
+    margin-top: 1.25rem;
     margin-left: 1rem;
-    margin-right: 1rem; } 
+    margin-right: 1rem; 
+   } 
   
-  .linkContactoGaleria {
+   .gridTexto{
     font-size: 1rem;
+   }
+
+  .linkContactoGaleria {
+    font-size: 1.45rem;
     padding-bottom: 2rem;
-    margin-left: 5rem;
+    text-align: center;
     }  
     
   .btn__galeria{
-    background-color:white;
-    width: $ancho/2;
-    height:$alto/2 ;
-    color:black;
-    font-size: 2rem;
-    padding: 0.75rem;
-    border-radius:10rem;
-    margin-left:14rem;
-    margin-right: 15rem ;
-    margin-bottom: 3rem;
-      &:hover {  
-      transform: scale(1.20);
-      background-color:rgb(29, 41, 37);
-      padding:1rem ;
+      width: $ancho/2.2;
+      height:$alto/2.2 ;
+      margin-left:13rem ;
+      padding: 0.5rem;
       }
-    } 
                 
   .btn__galeria__texto{
     color:black;
     &:hover{
-    color:wheat
+    color:white;
       }
     }
  
@@ -160,10 +158,10 @@
 
   .galeriaTituloh2{
     font-size: 1.5rem;
-    padding: 2rem;
+    padding: 1rem;
     margin-left: 1rem }
 
-  .grid__texto{
+  .gridTexto{
     font-size: 1.25rem;
     }
 
@@ -180,12 +178,18 @@
     "ocho";
     gap: 0.5rem;
     margin-left: 2rem;
-    margin-right: 2rem; } 
+    margin-right: 2rem; 
+    }
+
+  .gridTexto{
+    font-size: 1rem;
+    }
+  
+
   
   .linkContactoGaleria {
     font-size:1.25rem ;
     padding-bottom: 2rem;
-    margin-left: 2rem;
     text-align: center;
     }   
   
@@ -197,7 +201,7 @@
     font-size: 1.5rem;
     padding: 0.75rem;
     border-radius:10rem;
-    margin-left:8rem;
+    margin-left:9rem;
     margin-right: 15rem ;
     margin-bottom: 3rem;
      &:hover {  
@@ -210,7 +214,7 @@
   .btn__galeria__texto{
     color:black;
     &:hover{
-    color:white
+    color:white;
       }
     }
   
