--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -13,11 +13,13 @@ header {
   display: flex;
   flex-direction: row;
   gap:1rem;
-  &__logo {
-    width: 15vw;
-    height: 10vh; 
-     } 
    }
+
+.logo {
+  width: 15vw;
+  height: 10vh; 
+   } 
+  
  
 nav{   
   padding-top: 0.75rem;
@@ -53,11 +55,14 @@ a {
     display: flex;
     flex-direction: row;
     gap:1rem;
-    &__logo {
-      width: 30vw;
-      height: 5vh; 
-      }
     }
+
+
+  .logo{
+      max-width:100%;
+      height: 9vh; 
+      }
+    
     
   .navegador {
     margin-left: 1rem;
@@ -72,15 +77,16 @@ a {
     margin-right: 1rem;
     padding-top: 1rem;
     padding-bottom: 1rem;
+   
      }
 
   .tituloh1 {
     font-size: 1.5rem;
     }
       
-  .headerLogo {
-    width: 30vw;
-    height: 10vh; 
+  .logo {
+    max-width: 200%;
+    height: 6vh; 
     }
 
   .navegador {
