--- a/css/estilos.css
+++ b/css/estilos.css
@@ -344,7 +344,7 @@ span a:hover {
 .grid__container__nosotros2 {
   display: grid;
   grid-template-columns: 50% 50%;
-  grid-template-rows: 20rem 22rem 10rem;
+  grid-template-rows: 25rem 25rem 10rem;
   gap: 4rem;
   justify-content: center;
   align-content: center;
@@ -401,14 +401,14 @@ span a:hover {
   border-radius: 5%; }
 
 .imagenCaphai {
-  width: 40rem;
-  height: 22rem;
+  width: 32rem;
+  height: 25rem;
   border-radius: 5%; }
 
 .p__link {
   width: 25rem;
   height: 7rem;
-  margin-left: 30rem; }
+  margin-left: 25rem; }
 
 .linkContactoNosotros {
   font-size: 2rem;
@@ -423,7 +423,7 @@ span a:hover {
   font-size: 2rem;
   padding: 0.75rem;
   border-radius: 10rem;
-  margin-left: 40rem;
+  margin-left: 35rem;
   margin-right: 15rem;
   margin-bottom: 3rem; }
   .btn__nosotros:hover {
@@ -497,7 +497,7 @@ span a:hover {
   .grid__container__nosotros1 {
     display: grid;
     grid-template-columns: 50% 50%;
-    grid-template-rows: 12rem 12rem 10rem;
+    grid-template-rows: 12rem 12rem 15rem;
     gap: 1rem;
     padding-top: 0.25rem;
     margin-left: 1rem;
@@ -520,7 +520,7 @@ span a:hover {
   .grid__container__nosotros2 {
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: 18rem 15rem 16rem 15rem 5rem;
+    grid-template-rows: 20rem 15rem 20rem 15rem 5rem;
     gap: 1rem;
     padding-top: 0.5rem;
     padding-bottom: 0.10rem;
@@ -675,7 +675,7 @@ span a:hover {
   font-size: 2rem;
   padding: 0.75rem;
   border-radius: 10rem;
-  margin-left: 40rem;
+  margin-left: 35rem;
   margin-right: 15rem;
   margin-bottom: 3rem; }
   .btn__galeria:hover {
@@ -774,13 +774,13 @@ span a:hover {
   display: grid;
   grid-template-columns: 50% 50%;
   grid-template-rows: 25rem;
-  gap: 2rem;
+  gap: 12rem;
   justify-content: center;
   align-content: center;
   background-position: center;
   padding-bottom: 0.10rem;
-  margin-left: 5rem;
-  margin-right: 5rem; }
+  margin-left: 8rem;
+  margin-right: 8rem; }
 
 .container-fluid1 .grid__item .grid__uno {
   grid-row: 1/2;
@@ -817,15 +817,15 @@ span a:hover {
 .container__actitud3 {
   display: grid;
   grid-template-columns: 50% 50%;
-  grid-template-rows: 30rem;
-  gap: 2rem;
+  grid-template-rows: 35rem;
+  gap: 10rem;
   justify-content: center;
   align-content: center;
   background-position: center;
   padding-top: 2rem;
   padding-bottom: 0.10rem;
-  margin-left: 5rem;
-  margin-right: 5rem; }
+  margin-left: 8rem;
+  margin-right: 8rem; }
 
 .grid__container__actitud3 .grid__uno {
   grid-row: 1/2;
@@ -840,7 +840,7 @@ span a:hover {
 
 .imagenActitud {
   width: 40rem;
-  height: 25rem;
+  height: 30rem;
   border: solid wheat;
   border-radius: 5%; }
 
@@ -856,7 +856,7 @@ span a:hover {
   font-size: 2rem;
   padding: 0.75rem;
   border-radius: 10rem;
-  margin-left: 40rem;
+  margin-left: 35rem;
   margin-right: 15rem;
   margin-bottom: 3rem; }
   .btn__actitud:hover {
@@ -999,7 +999,7 @@ span a:hover {
   .container__actitud3 {
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: 15rem 20rem;
+    grid-template-rows: 15rem 30rem;
     gap: 1rem;
     padding-top: 2rem;
     padding-bottom: 0.10rem;
@@ -1031,7 +1031,7 @@ span a:hover {
     font-size: 1.5rem;
     padding: 0.75rem;
     border-radius: 10rem;
-    margin-left: 9rem;
+    margin-left: 10rem;
     margin-right: 15rem;
     margin-bottom: 3rem; }
     .btn__actitud:hover {
@@ -1146,8 +1146,8 @@ span a:hover {
   width: 30rem;
   height: 20rem;
   text-align: center;
-  margin-left: 30rem;
-  margin-right: 10rem;
+  margin-left: 20rem;
+  margin-right: 15rem;
   margin-top: 2rem;
   margin-bottom: 2rem;
   border-radius: 7%; }
@@ -1251,13 +1251,13 @@ span a:hover {
     padding-top: 1rem; }
   .grid__container__contacto {
     grid-template-columns: 100%;
-    grid-template-rows: 20rem 17rem 20rem 20rem 4rem 4em;
+    grid-template-rows: 20rem 20rem 20rem 20rem 4rem 4rem;
     justify-items: center;
     align-items: center;
     gap: 2rem;
     margin-left: 1rem;
     padding-top: 1rem;
-    padding-bottom: 1rem;
+    padding-bottom: 3rem;
     width: 25rem;
     height: 98rem; }
   .grid__container__contacto .grid__uno {
@@ -1324,7 +1324,8 @@ span a:hover {
   .contactoTexto {
     font-size: 1.1rem;
     text-align: center;
-    margin-left: 1rem;
+    margin-top: 2rem;
+    margin-left: 6rem;
     margin-right: 1rem; }
   .imput {
     background-color: #1d2925;
@@ -1333,7 +1334,7 @@ span a:hover {
     flex-wrap: wrap;
     font-size: 2rem;
     padding: 1rem;
-    width: 21rem;
+    width: 25rem;
     height: 18rem;
     text-align: center;
     margin-left: 2rem;
@@ -1352,7 +1353,9 @@ span a:hover {
 body {
   margin: 1rem;
   background-color: #304438;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif; }
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  overflow-x: hidden;
+  width: 100%; }
 
 h1 {
   font-size: 3rem;
