--- a/scss/style.scss
+++ b/scss/style.scss
@@ -17,6 +17,8 @@ body {
   margin: 1rem;
   background-color:$color-body;
   font-family:$font-family-body;
+  overflow-x: hidden;
+  width: 100%;
   }
 
 h1 {
