--- a/css/estilos.css
+++ b/css/estilos.css
@@ -376,7 +376,7 @@ span a:hover {
   border-radius: 5%; }
 
 .imagenCaphai {
-  width: 42rem;
+  width: 38rem;
   height: 25rem;
   border-radius: 5%; }
 
@@ -703,15 +703,15 @@ span a:hover {
 
 .container__actitud1 {
   display: grid;
-  grid-template-columns: 50% 50%;
+  grid-template-columns: 45% 5% 45%;
   grid-template-rows: 25rem;
-  gap: 12rem;
+  gap: 6rem;
   justify-content: center;
   align-content: center;
   background-position: center;
   padding-bottom: 0.10rem;
   margin-left: 8rem;
-  margin-right: 8rem; }
+  margin-right: 1rem; }
 
 .container-fluid1 .grid__uno {
   grid-row: 1/2;
