--- a/scss/_actitud.scss
+++ b/scss/_actitud.scss
@@ -11,15 +11,15 @@
 
 .container__actitud1 {
   display: grid;
-  grid-template-columns: 50% 50%;
+  grid-template-columns: 45% 5% 45%;
   grid-template-rows: 25rem;
-  gap: 12rem;
+  gap: 6rem;
   justify-content: center;
   align-content: center;
   background-position: center;
   padding-bottom: 0.10rem;
   margin-left: 8rem;
-  margin-right: 8rem; 
+  margin-right: 1rem; 
   }
 
 .container-fluid1 .grid__uno {
