Se modifico grid actitud

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -703,19 +703,20 @@ span a:hover {
 
 .container__actitud1 {
   display: grid;
-  grid-template-columns: 40% 5% 40%;
+  grid-template-columns: 35% 10% 35%;
   grid-template-rows: 25rem;
-  gap: 8rem;
+  gap: 15rem;
   justify-content: center;
   align-content: center;
   background-position: center;
   padding-bottom: 0.10rem;
-  margin-left: 7rem;
-  margin-right: 1rem; }
+  margin-left: 10rem;
+  margin-right: 2rem; }
 
 .container-fluid1 .grid__uno {
   grid-row: 1/2;
   grid-column: 1/2;
+  width: 20rem;
   background-position: inherit;
   background-size: cover;
   background-repeat: no-repeat; }
@@ -723,6 +724,7 @@ span a:hover {
 .container-fluid1 .grid__dos {
   grid-row: 1/2;
   grid-column: 2/3;
+  width: 20rem;
   background-position: inherit;
   background-size: cover;
   background-repeat: no-repeat; }
