--- a/scss/_actitud.scss
+++ b/scss/_actitud.scss
@@ -19,7 +19,7 @@
   background-position: center;
   padding-bottom: 0.10rem;
   margin-left: 15rem;
-  margin-right: 3rem; 
+  margin-right: 10rem; 
   }
 
 .container-fluid1 .grid__uno {
@@ -40,6 +40,12 @@
   background-repeat: no-repeat; 
   }
 
+.container__texto1{
+    text-align: justify;
+    }
+
+
+
 .container__actitud2{
   margin-left: 3rem;
   margin-right: 4rem;
@@ -48,7 +54,7 @@
   padding-left: 1rem;
   padding-right: 1rem;
   padding-bottom: 0.75rem;
-  text-align: justify;
+  
   border: solid white;
   }
 
@@ -85,8 +91,8 @@
   grid-column: 2/3;
    } 
 
-.container__texto{
-  text-align: justify;
+.container__texto2{
+  text-align: left;
   }
 
 .imagenActitud {
