--- a/scss/_actitud.scss
+++ b/scss/_actitud.scss
@@ -5,8 +5,8 @@
   }
 
 .container-fluid1{
-  width: 40rem;
-  height: 20rem;
+  width: 35rem;
+  height: 25rem;
   }
 
 .container__actitud1 {
@@ -25,7 +25,6 @@
 .container-fluid1 .grid__uno {
   grid-row: 1/2;
   grid-column: 1/2;
-  width: 20rem;
   background-position: inherit;
   background-size: cover;
   background-repeat: no-repeat; 
@@ -34,17 +33,15 @@
 .container-fluid1 .grid__dos {
   grid-row: 1/2;
   grid-column: 2/3;
-  width: 20rem;
   background-position: inherit;
   background-size: cover;
   background-repeat: no-repeat; 
   }
 
 .container__texto1{
-    text-align: justify;
+  font-size: 1.25rem;
+  text-align: justify;
     }
-
-
 
 .container__actitud2{
   margin-left: 3rem;
@@ -54,7 +51,6 @@
   padding-left: 1rem;
   padding-right: 1rem;
   padding-bottom: 0.75rem;
-  
   border: solid white;
   }
 
