--- a/scss/_actitud.scss
+++ b/scss/_actitud.scss
@@ -74,7 +74,7 @@
   padding-top: 2rem;
   padding-bottom: 0.10rem;
   margin-left: 8rem;
-  margin-right: 8rem; 
+  margin-right: 12rem; 
   }
 
 .grid__container__actitud3 .grid__uno {
@@ -173,7 +173,7 @@
     grid-column: 1/1;
     }
 
-  .container__texto{
+  .container__texto1{
     font-size: 1.25rem;
     } 
    
@@ -279,9 +279,14 @@
     grid-column: 1/1;
     }
 
-  .container__texto{
+  .container__texto1{
     font-size: 1rem;
     } 
+
+  .container__texto2{
+    font-size: 1rem;
+    } 
+
   .container__actitud2{
     margin-left: 1rem;
     margin-right: 2rem;
