--- a/scss/_actitud.scss
+++ b/scss/_actitud.scss
@@ -64,9 +64,10 @@
   }
 
 .container__actitud3{
+  background-color: black;
   display: grid;
   grid-template-columns: 50% 50%;
-  grid-template-rows: 30rem;
+  grid-template-rows: 25rem;
   gap: 10rem;
   justify-content: center;
   align-content: center;
@@ -93,7 +94,7 @@
 
 .imagenActitud {
   width: 35rem;
-  height: 25rem;
+  height: 22rem;
   border: solid wheat;
   border-radius: 5% ;
   } 
