--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -225,67 +225,86 @@
 @media (min-width: 320px) and (max-width: 540px) {
  
   .contactoTituloh2{
-    font-size: 1.3rem;
+    font-size: 1.25rem;
     text-align: center;
-    margin-left: 2rem;
+    margin-left: 1rem;
     padding-top: 1rem;
      }
   
   .grid__container__contacto {
     grid-template-columns: 100%;
-    grid-template-rows: 20rem 20rem 20rem 20rem 4rem 4rem;
-    justify-items: center;
-    align-items: center;
-    gap: 2rem;
+    grid-template-rows: 18rem 18rem 18rem 18rem 4rem 6rem;
+    justify-items: left;
+    align-items: left;
+    padding-left: 0.5rem;
+    gap: 1rem;
     margin-left: 1rem;
-    padding-top: 1rem;
+    padding-top: 0.5rem;
     padding-bottom: 3rem;
-    width: 25rem;
-    height:98rem;
+    width: 18rem;
+    height:88rem;
      }
+
+  .key1-contacto{
+    width: 17rem;
+    height: 15rem;
+    }
+
+  .key2-contacto{
+    width: 17rem;
+    height: 15rem;
+    }
+
+  .key3-contacto{
+    width: 17rem;
+    height: 15rem;
+    }
   
   .grid__container__contacto .grid__uno {
     align-content: center;
     grid-row: 1/2;
     grid-column: 1/1;
-    width: 20rem;
-    height:20rem;
-    }
+    width: 17rem;
+    height: 18rem;
+     }
   
   .grid__container__contacto .grid__uno__texto {
     grid-row: 2/3;
     grid-column:1/1;
-    width: 20rem;
-    height: 17rem;
+    width: 17rem;
+    height: 18rem;
      }
  
   .grid__container__contacto .grid__dos {
     grid-row: 3/4;
     grid-column: 1/1;
-    width: 20rem;
-    height:20rem ;
+    width: 17rem;
+    height: 18rem;
+    
     }
 
   .grid__container__contacto .grid__tres {
     grid-row: 4/5;
     grid-column: 1/1;
-    width: 20rem;
-    height:20rem ;
-    
+    width: 17rem;
+    height: 18rem;
+       
     }         
 
   .grid__container__contacto .grid__dos__texto {
     grid-row: 5/6;
     grid-column: 1/1;
-    width: 20rem;
-    }
+    width: 17rem;
+    height: 4rem;
+     }
 
   .grid__container__contacto .grid__tres__texto  {
     grid-row: 6/7; 
     grid-column: 1/1;
-    width: 20rem;
     font-size: 0.5rem;
-    }
+    width: 17rem;
+    height: 6rem;
+     }
 
   .textoGrid1{
     font-size: 1rem;
@@ -306,10 +325,10 @@
   .imput {
     font-size: 2rem;
     padding: 1rem;
-    width: 23rem;
-    height: 18rem;
-    margin-left: 2rem;
-    margin-right: 2rem;
+    width: 17rem;
+    height: 25rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
     margin-top: 2rem;
     margin-bottom: 1.5rem; 
     }
