--- a/css/estilos.css
+++ b/css/estilos.css
@@ -38,15 +38,12 @@ header {
   width: 15vw;
   height: 10vh; }
 
-nav {
-  padding-top: 0.75rem; }
-
 .navegador {
   display: flex;
   flex-wrap: nowrap;
   justify-content: center; }
 
-.navegador span a {
+.navegador p a {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   color: white;
   font-weight: 1rem;
@@ -55,7 +52,7 @@ nav {
   padding-left: 1rem;
   padding-right: 1rem; }
 
-.navegador span a:hover {
+.navegador p a:hover {
   padding: 0.5rem; }
 
 a {
@@ -64,31 +61,34 @@ a {
 @media (min-width: 541px) and (max-width: 720px) {
   .header {
     display: flex;
-    flex-direction: row;
-    gap: 1rem; }
+    flex-direction: row; }
   .logo {
-    max-width: 100%;
-    height: 9vh; }
-  .navegador {
-    margin-left: 1rem;
-    padding: 0.05rem;
-    padding-top: 0.10rem; } }
+    width: 20vw;
+    height: 10vh; } }
 
 @media (min-width: 320px) and (max-width: 540px) {
+  body {
+    margin-bottom: 0.5rem; }
   header {
-    margin-left: 1rem;
-    margin-right: 1rem;
-    padding-top: 1rem;
-    padding-bottom: 1rem; }
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
+    padding-top: 1rem; }
   .tituloh1 {
-    font-size: 1.5rem; }
+    font-size: 1.25rem; }
   .logo {
-    max-width: 200%;
-    height: 6vh; }
+    width: 30vw;
+    height: 8vh; }
   .navegador {
     margin-left: 0.1rem;
-    padding: 0.05rem;
-    padding-top: 0.10rem; } }
+    padding-top: 0.1rem; }
+  .navegador p a {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: white;
+    font-weight: 0.5rem;
+    font-size: 0.75rem;
+    border-left: 0.1rem solid white;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem; } }
 
 footer {
   display: flex;
@@ -117,15 +117,33 @@ footer {
   justify-content: center;
   margin-top: 0.5rem; }
 
-.navegador span a {
+.navegador p a {
   color: white;
   font-size: 1rem;
   border-left: 0.10rem solid white;
   padding-left: 1rem;
   padding-right: 1rem; }
 
-span a:hover {
+p a:hover {
   padding: 0.5rem; }
+
+@media (min-width: 320px) and (max-width: 540px) {
+  body {
+    margin-bottom: 0.5rem; }
+  .instagram {
+    width: 2rem;
+    height: 1.5rem; }
+  .facebook {
+    width: 2rem;
+    height: 1.5rem; }
+  .navegador p a {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: white;
+    font-weight: 0.5rem;
+    font-size: 0.75rem;
+    border-left: 0.1rem solid white;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem; } }
 
 .indexTituloh2 {
   margin-left: 6rem;
@@ -207,41 +225,49 @@ span a:hover {
 
 @media (min-width: 320px) and (max-width: 540px) {
   .indexTituloh2 {
-    font-size: 1.25rem;
-    margin-left: 1rem;
-    margin-top: 0.5rem; }
+    font-size: 1rem;
+    margin-left: 0.25rem;
+    margin-top: 0.25rem;
+    margin-bottom: 0.25rem; }
   .container-fluid {
-    width: 25rem;
-    height: 10rem;
+    width: 18rem;
+    height: 9rem;
+    padding: 0.5rem;
     margin-left: 0.5rem;
-    margin-right: 1rem; }
+    margin-right: 1rem;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem; }
   .indexTexto {
+    flex-direction: column;
     font-size: 0.5rem;
     gap: 1rem;
     margin-left: 1rem;
     margin-right: 1rem;
-    margin-bottom: 1rem;
-    margin-top: 2rem; }
+    margin-bottom: 0.5rem;
+    margin-top: 0.5rem; }
   .indexTexto__p {
-    font-size: 1rem; }
+    font-size: 0.75rem; }
   .linkContactoIndex {
-    font-size: 1.25rem;
+    font-size: 0.75rem;
     padding-top: 1rem;
     padding-bottom: 2rem;
-    margin-left: 1rem; }
+    margin-left: 1rem;
+    margin-right: 1rem;
+    text-align: center; }
   .btn {
-    width: 8rem;
-    height: 4rem;
-    font-size: 1.5rem;
-    padding: 0.75rem;
+    width: 6.66667rem;
+    height: 3.33333rem;
+    font-size: 1.25rem;
+    padding: 0.25rem;
     border-radius: 10rem;
-    margin-left: 10rem;
-    margin-right: 15rem; } }
+    margin-left: 7rem;
+    margin-right: 5rem; } }
 
 .nosotrosTituloh2 {
   text-align: center;
   color: white;
-  padding: 1rem; }
+  padding: 1rem;
+  margin-top: 2rem; }
 
 .nosotrosTituloh3 {
   text-align: center;
@@ -251,18 +277,6 @@ span a:hover {
 
 .nosotrosTituloh4 {
   color: white; }
-
-.grid__container__nosotros1 {
-  display: grid;
-  grid-template-columns: 50% 50%;
-  grid-template-rows: 25rem 25rem 8rem;
-  gap: 2rem;
-  justify-content: center;
-  align-content: center;
-  background-position: center;
-  padding-top: 1.5rem;
-  margin-left: 5rem;
-  margin-right: 5rem; }
 
 .text-container {
   width: 100%;
@@ -275,6 +289,18 @@ span a:hover {
 
 .texto1 {
   font-size: 1.5rem; }
+
+.grid__container__nosotros1 {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: 25rem 25rem 8rem;
+  gap: 2rem;
+  justify-content: center;
+  align-content: center;
+  background-position: center;
+  padding-top: 1.5rem;
+  margin-left: 5rem;
+  margin-right: 5rem; }
 
 .grid__container__nosotros1 .grid__uno {
   grid-row: 1/2;
@@ -517,27 +543,27 @@ span a:hover {
     grid-column: 1/1;
     background-image: url("../recursos/caphai.png"); }
   .imagenCaphai {
-    width: 20em;
-    height: 15rem;
+    width: 15em;
+    height: 10rem;
     border-radius: 5%; }
   .p__link {
-    width: 15rem;
-    height: 5rem;
+    width: 10rem;
+    height: 3rem;
     margin-left: 3.5rem; }
   .linkContactoNosotros {
-    font-size: 1.25rem;
+    font-size: 1rem;
     padding-bottom: 2rem;
     margin-top: 1rem;
     margin-left: 0.75rem;
     text-align: center; }
   .btn__nosotros {
-    height: 4rem;
-    color: black;
-    font-size: 1.5rem;
-    padding: 0.75rem;
-    margin-left: 9rem;
-    margin-right: 15rem;
-    margin-bottom: 3rem; } }
+    width: 6.66667rem;
+    height: 3.33333rem;
+    font-size: 1.25rem;
+    padding: 0.5rem;
+    border-radius: 10rem;
+    margin-left: 7rem;
+    margin-right: 5rem; } }
 
 .galeriaTituloh2 {
   padding: 2rem;
@@ -664,7 +690,7 @@ span a:hover {
 
 @media (min-width: 320px) and (max-width: 540px) {
   .galeriaTituloh2 {
-    font-size: 1.5rem;
+    font-size: 1.25rem;
     padding: 1rem;
     margin-left: 1rem; }
   .gridTexto {
@@ -680,17 +706,16 @@ span a:hover {
   .gridTexto {
     font-size: 1rem; }
   .linkContactoGaleria {
-    font-size: 1.25rem;
+    font-size: 1rem;
     padding-bottom: 2rem;
     text-align: center; }
   .btn__galeria {
-    width: 8rem;
-    height: 4rem;
-    font-size: 1.5rem;
-    padding: 0.75rem;
-    margin-left: 9rem;
-    margin-right: 15rem;
-    margin-bottom: 3rem; } }
+    width: 6.66667rem;
+    height: 3.33333rem;
+    font-size: 1.25rem;
+    padding: 0.5rem;
+    margin-left: 7rem;
+    margin-right: 5rem; } }
 
 .actitudTituloh2 {
   margin-left: 25rem;
@@ -698,29 +723,30 @@ span a:hover {
   padding-bottom: 2rem; }
 
 .container-fluid1 {
-  width: 35rem;
-  height: 25rem; }
+  width: 39rem;
+  height: auto; }
 
 .container__actitud1 {
   display: grid;
-  grid-template-columns: 35% 10% 35%;
-  grid-template-rows: 25rem;
-  gap: 15rem;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: 22rem;
+  gap: 3rem;
   justify-content: center;
   align-content: center;
   background-position: center;
   padding-bottom: 0.10rem;
-  margin-left: 13rem;
-  margin-right: 7rem; }
+  margin-left: 5rem;
+  margin-right: 5rem;
+  margin-bottom: 2rem; }
 
-.container-fluid1 .grid__uno {
+.container__actitud1.grid__uno {
   grid-row: 1/2;
   grid-column: 1/2;
   background-position: inherit;
   background-size: cover;
   background-repeat: no-repeat; }
 
-.container-fluid1 .grid__dos {
+.container__actitud1.grid__dos {
   grid-row: 1/2;
   grid-column: 2/3;
   background-position: inherit;
@@ -728,7 +754,7 @@ span a:hover {
   background-repeat: no-repeat; }
 
 .container__texto1 {
-  font-size: 1.25rem;
+  font-size: 1.40rem;
   text-align: justify; }
 
 .container__actitud2 {
@@ -746,13 +772,13 @@ span a:hover {
   margin-left: 25rem; }
 
 .actitud__texto {
-  font-size: 1.35rem; }
+  font-size: 1.4rem; }
 
 .container__actitud3 {
   display: grid;
   grid-template-columns: 50% 50%;
   grid-template-rows: 25rem;
-  gap: 10rem;
+  gap: 5rem;
   justify-content: center;
   align-content: center;
   background-position: center;
@@ -790,7 +816,7 @@ span a:hover {
   font-size: 2rem;
   padding: 0.75rem;
   border-radius: 10rem;
-  margin-left: 37rem;
+  margin-left: 40rem;
   margin-right: 15rem;
   margin-bottom: 3rem; }
   .btn__actitud:hover {
@@ -811,32 +837,33 @@ span a:hover {
     padding-top: 2rem;
     padding-bottom: 2rem; }
   .actitudTituloh3 {
-    font-size: 1.60rem;
-    margin-left: 1rem;
+    font-size: 1.50rem;
+    margin-right: 1rem;
     padding-top: 2rem;
-    padding-bottom: 2rem; }
+    padding-bottom: 2rem;
+    text-align: center; }
   .container-fluid1 {
-    width: 33rem;
-    height: 10rem; }
+    width: 32rem;
+    height: auto; }
   .container__actitud1 {
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: 20rem 20rem;
-    gap: 2rem;
-    justify-content: center;
-    align-content: center;
-    background-position: center;
+    grid-template-rows: 20rem;
+    gap: 1rem;
     padding-bottom: 0.10rem;
     margin-left: 2rem;
-    margin-right: 1rem; }
-  .container-fluid1 .grid__uno {
+    margin-right: 2rem;
+    margin-bottom: 2rem; }
+  .container__actitud1.grid__uno {
     grid-row: 1/2;
-    grid-column: 1/1; }
-  .container-fluid1 .grid__dos {
-    grid-row: 2/3;
-    grid-column: 1/1; }
+    grid-column: 1/2;
+    margin-left: 7rem; }
+  .container__actitud1.grid__dos {
+    grid-row: 1/2;
+    grid-column: 2/3; }
   .container__texto1 {
-    font-size: 1.25rem; }
+    font-size: 1.25rem;
+    text-align: justify; }
   .container__actitud2 {
     margin-left: 2rem;
     margin-right: 2rem;
@@ -850,10 +877,10 @@ span a:hover {
   .container__actitud3 {
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: 20rem 23rem;
+    grid-template-rows: 23rem 23rem;
     gap: 1rem;
     padding-top: 1em;
-    margin-left: 1rem;
+    margin-left: 2rem;
     margin-right: 1rem; }
   .grid__container__actitud3 .grid__dos {
     margin-right: 1rem;
@@ -867,8 +894,8 @@ span a:hover {
     grid-row: 1/2;
     grid-column: 1/1; }
   .imagenActitud {
-    width: 35rem;
-    height: 20rem; }
+    width: 32rem;
+    height: auto; }
   .linkContactoActitud {
     font-size: 1.4rem;
     text-align: center;
@@ -883,49 +910,50 @@ span a:hover {
 @media (min-width: 320px) and (max-width: 540px) {
   .actitudTituloh2 {
     font-size: 1.25rem;
-    margin-left: 3rem;
+    margin-left: 1rem;
     padding-top: 2rem;
     padding-bottom: 2rem; }
   .container-fluid1 {
-    width: 23rem;
-    height: 20rem; }
+    width: 17em;
+    height: auto; }
   .container__actitud1 {
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: 18rem 14rem;
+    grid-template-rows: 25rem;
     gap: 1rem;
-    justify-content: center;
-    align-content: center;
-    background-position: center;
-    text-align: justify;
     padding-bottom: 0.10rem;
     margin-left: 1rem;
-    margin-right: 1rem; }
-  .container-fluid1 .grid__uno {
+    margin-right: 1rem;
+    margin-bottom: 2rem; }
+  .container__actitud1.grid__uno {
     grid-row: 1/2;
-    grid-column: 1/1; }
-  .container-fluid1 .grid__dos {
-    grid-row: 2/3;
-    grid-column: 1/1; }
+    grid-column: 1/2;
+    margin-left: 7rem; }
+  .container__actitud1.grid__dos {
+    grid-row: 1/2;
+    grid-column: 2/3; }
   .container__texto1 {
-    font-size: 1rem; }
+    font-size: 1rem;
+    text-align: justify; }
   .container__texto2 {
-    font-size: 1rem; }
+    font-size: 0.75rem;
+    text-align: justify; }
   .container__actitud2 {
     margin-left: 1rem;
     margin-right: 2rem;
     padding-bottom: 0.7rem;
     gap: 1rem; }
   .actitudTituloh3 {
-    font-size: 1.20rem;
+    font-size: 1rem;
     color: white;
-    margin-left: 1rem; }
+    margin-left: 1rem;
+    text-align: center; }
   .actitud__texto {
     font-size: 1rem; }
   .container__actitud3 {
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: 15rem 19rem;
+    grid-template-rows: 13rem 25rem;
     gap: 1rem;
     padding-top: 2rem;
     padding-bottom: 0.10rem;
@@ -941,23 +969,21 @@ span a:hover {
     grid-row: 2/3;
     grid-column: 1/1; }
   .imagenActitud {
-    width: 22rem;
-    height: 15rem; }
+    width: 17rem;
+    height: auto; }
   .linkContactoActitud {
-    font-size: 1.20rem;
+    font-size: 1rem;
     text-align: center;
     margin-top: 1rem;
     padding-bottom: 2rem;
     text-align: center; }
   .btn__actitud {
-    width: 8rem;
-    height: 4rem;
-    font-size: 1.5rem;
-    padding: 0.75rem;
-    border-radius: 10rem;
-    margin-left: 10rem;
-    margin-right: 15rem;
-    margin-bottom: 3rem; } }
+    width: 6.66667rem;
+    height: 3.33333rem;
+    font-size: 1.25rem;
+    padding: 0.5rem;
+    margin-left: 7rem;
+    margin-right: 5rem; } }
 
 .contactoTituloh2 {
   text-align: center;
@@ -1145,51 +1171,63 @@ span a:hover {
 
 @media (min-width: 320px) and (max-width: 540px) {
   .contactoTituloh2 {
-    font-size: 1.3rem;
+    font-size: 1.25rem;
     text-align: center;
-    margin-left: 2rem;
+    margin-left: 1rem;
     padding-top: 1rem; }
   .grid__container__contacto {
     grid-template-columns: 100%;
-    grid-template-rows: 20rem 20rem 20rem 20rem 4rem 4rem;
-    justify-items: center;
-    align-items: center;
-    gap: 2rem;
+    grid-template-rows: 18rem 18rem 18rem 18rem 4rem 6rem;
+    justify-items: left;
+    align-items: left;
+    padding-left: 0.5rem;
+    gap: 1rem;
     margin-left: 1rem;
-    padding-top: 1rem;
+    padding-top: 0.5rem;
     padding-bottom: 3rem;
-    width: 25rem;
-    height: 98rem; }
+    width: 18rem;
+    height: 88rem; }
+  .key1-contacto {
+    width: 17rem;
+    height: 15rem; }
+  .key2-contacto {
+    width: 17rem;
+    height: 15rem; }
+  .key3-contacto {
+    width: 17rem;
+    height: 15rem; }
   .grid__container__contacto .grid__uno {
     align-content: center;
     grid-row: 1/2;
     grid-column: 1/1;
-    width: 20rem;
-    height: 20rem; }
+    width: 17rem;
+    height: 18rem; }
   .grid__container__contacto .grid__uno__texto {
     grid-row: 2/3;
     grid-column: 1/1;
-    width: 20rem;
-    height: 17rem; }
+    width: 17rem;
+    height: 18rem; }
   .grid__container__contacto .grid__dos {
     grid-row: 3/4;
     grid-column: 1/1;
-    width: 20rem;
-    height: 20rem; }
+    width: 17rem;
+    height: 18rem; }
   .grid__container__contacto .grid__tres {
     grid-row: 4/5;
     grid-column: 1/1;
-    width: 20rem;
-    height: 20rem; }
+    width: 17rem;
+    height: 18rem; }
   .grid__container__contacto .grid__dos__texto {
     grid-row: 5/6;
     grid-column: 1/1;
-    width: 20rem; }
+    width: 17rem;
+    height: 4rem; }
   .grid__container__contacto .grid__tres__texto {
     grid-row: 6/7;
     grid-column: 1/1;
-    width: 20rem;
-    font-size: 0.5rem; }
+    font-size: 0.5rem;
+    width: 17rem;
+    height: 6rem; }
   .textoGrid1 {
     font-size: 1rem; }
   .textoGrid {
@@ -1203,10 +1241,10 @@ span a:hover {
   .imput {
     font-size: 2rem;
     padding: 1rem;
-    width: 23rem;
-    height: 18rem;
-    margin-left: 2rem;
-    margin-right: 2rem;
+    width: 17rem;
+    height: 25rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
     margin-top: 2rem;
     margin-bottom: 1.5rem; }
   .imput .contacto__imput {
@@ -1220,9 +1258,7 @@ span a:hover {
 body {
   margin: 1rem;
   background-color: #304438;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  overflow-x: hidden;
-  width: 100%; }
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif; }
 
 h1 {
   font-size: 3rem;
