--- a/scss/_Index.scss
+++ b/scss/_Index.scss
@@ -104,46 +104,53 @@
 @media (min-width: 320px) and (max-width: 540px) {
     
   .indexTituloh2{
-    font-size:1.25rem ;
-    margin-left: 1rem;
-    margin-top: 0.5rem;
+    font-size:1rem ;
+    margin-left: 0.25rem;
+    margin-top: 0.25rem;
+    margin-bottom: 0.25rem;
     }
 
   .container-fluid{
-    width: 25rem ;
-    height:10rem ;
+    width: 18rem ;
+    height:9rem ;
+    padding: 0.5rem;
     margin-left: 0.5rem;
     margin-right: 1rem;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
     }
     
   .indexTexto{
+    flex-direction: column;
     font-size: 0.5rem;
     gap: 1rem;
     margin-left:1rem ;
     margin-right: 1rem ;
-    margin-bottom: 1rem;
-    margin-top: 2rem;
+    margin-bottom: 0.5rem;
+    margin-top: 0.5rem;
      }
 
   .indexTexto__p{
-    font-size:1rem ;
+    font-size:0.75rem ;
      }  
 
   .linkContactoIndex{
-    font-size: 1.25rem;
+    font-size: 0.75rem;
     padding-top: 1rem;
     padding-bottom: 2rem;
     margin-left: 1rem;
+    margin-right: 1rem;
+    text-align: center;
      }
     
     .btn{
-      width: $ancho/2.5;
-      height:$alto/2.5 ;
-      font-size: 1.5rem;
-      padding: 0.75rem;
+      width: $ancho/3;
+      height:$alto/3 ;
+      font-size: 1.25rem;
+      padding: 0.25rem;
       border-radius:10rem;
-      margin-left:10rem;
-      margin-right: 15rem ;
+      margin-left:7rem;
+      margin-right: 5rem ;
       } 
     
   } 
