--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -19,11 +19,6 @@ header {
   width: 15vw;
   height: 10vh; 
    } 
-  
- 
-nav{   
-  padding-top: 0.75rem;
-  }
 
 .navegador {
   display: flex;
@@ -31,7 +26,7 @@ nav{
   justify-content:center;
    }
   
-.navegador span a {
+.navegador p a {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   color: white;
   font-weight: 1rem;
@@ -41,7 +36,7 @@ nav{
   padding-right: 1rem;
    }
   
-.navegador span a:hover {
+.navegador p a:hover {
   padding: 0.5rem;
   }
 
@@ -54,44 +49,52 @@ a {
   .header{
     display: flex;
     flex-direction: row;
-    gap:1rem;
-    }
-
-
-  .logo{
-      max-width:100%;
-      height: 9vh; 
-      }
-    
-    
-  .navegador {
-    margin-left: 1rem;
-    padding: 0.05rem;
-    padding-top: 0.10rem;
      }
+
+
+  .logo {
+    width: 20vw;
+    height: 10vh; 
+    } 
+ 
   }
 
 @media (min-width: 320px) and (max-width: 540px) {
+  
+  body{
+    margin-bottom: 0.5rem;
+  }
+
   header {
-    margin-left: 1rem;
-    margin-right: 1rem;
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
     padding-top: 1rem;
-    padding-bottom: 1rem;
-   
-     }
+    }
 
   .tituloh1 {
-    font-size: 1.5rem;
+    font-size: 1.25rem;
     }
       
   .logo {
-    max-width: 200%;
-    height: 6vh; 
+    width: 30vw;
+    height: 8vh; 
     }
 
   .navegador {
     margin-left: 0.1rem;
-    padding: 0.05rem;
-    padding-top: 0.10rem; 
+    padding-top: 0.1rem; 
     }
+ 
+
+  .navegador p a{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: white;
+    font-weight: 0.5rem;
+    font-size: 0.75rem;
+    border-left: 0.1rem solid white;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+    }    
+
+  
   }
