--- a/scss/_nosotros.scss
+++ b/scss/_nosotros.scss
@@ -2,6 +2,7 @@
   text-align: center;
   color: white;
   padding: 1rem;
+  margin-top: 2rem;
     }
 
 .nosotrosTituloh3{
@@ -15,6 +16,21 @@
   color: white;
   } 
 
+.text-container {
+  width: 100%;
+  background: #00000099;
+  text-align: center;
+  }
+  
+.texto{
+  font-size: 2rem;
+  color: white;
+  }
+  
+.texto1{
+  font-size:1.5rem ;
+  }     
+
 .grid__container__nosotros1{
   display:grid;
   grid-template-columns:50% 50%;
@@ -27,23 +43,8 @@
   margin-left: 5rem;
   margin-right: 5rem;
   }
-
-.text-container {
-  width: 100%;
-  background: #00000099;
-  text-align: center;
-  }
-
-.texto{
-  font-size: 2rem;
-  color: white;
-  }
-
-.texto1{
-  font-size:1.5rem ;
-  }   
    
-.grid__container__nosotros1  .grid__uno{
+.grid__container__nosotros1 .grid__uno{
   grid-row: 1/2;
   grid-column: 1/2;
   background-image: url("../recursos/Nosotros 1.jpg");
@@ -52,7 +53,7 @@
   background-repeat: no-repeat;
   } 
   
-.grid__container__nosotros1  .grid__dos{
+.grid__container__nosotros1 .grid__dos{
   grid-row: 1/2;
   grid-column: 2/3;
   background-image: url("../recursos/Nosotros 2.jpg");
@@ -87,8 +88,6 @@
   justify-content:stretch;
   align-content: stretch;
   }
-
-   
 
 .grid__container__nosotros2{
   display:grid;
@@ -358,19 +357,19 @@
      }
      
   .imagenCaphai{
-    width: 20em;
-    height: 15rem;
+    width: 15em;
+    height: 10rem;
     border-radius:5% ;
       }  
 
   .p__link{   
-    width: 15rem;
-    height: 5rem;
+    width: 10rem;
+    height: 3rem;
     margin-left: 3.5rem ;
     }
 
   .linkContactoNosotros{
-    font-size: 1.25rem;
+    font-size: 1rem;
     padding-bottom: 2rem;
     margin-top: 1rem;
     margin-left: 0.75rem;
@@ -378,13 +377,13 @@
     }
     
   .btn__nosotros{
-    height:$alto/2.5 ;
-    color:black;
-    font-size: 1.5rem;
-    padding: 0.75rem;
-    margin-left:9rem;
-    margin-right: 15rem ;
-    margin-bottom: 3rem;
+    width: $ancho/3;
+    height:$alto/3 ;
+    font-size: 1.25rem;
+    padding: 0.5rem;
+    border-radius:10rem;
+    margin-left:7rem;
+    margin-right: 5rem ;
     } 
     
     
